--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Coupon Form</title>
-  </head>
-  <body>
-    <%= form_tag coupons_path do %>
-    <label for="store">Store:</label>
-    <%= text_field_tag :store %>
-    <label for="coupon_code">Coupon Code:</label>
-    <%= text_field_tag :coupon_code %>
-    <%= submit_tag "Submit Coupon" %>
-    <%end%>
-  </body>
-</html>
+<html>  
+    <head>
+        <title>All Coupons</title>
+    </head>
+    <body>
+    <h1>Coupon Form</h1>
+        <%= form_tag coupons_path do %>
+            <label for="store">Store:</label>
+            <%= text_field_tag :store %>
+            <br>
+            <label for="coupon_code">Coupon Code:</label>
+            <%= text_field_tag :coupon_code %>
+            <br>
+            <%= submit_tag "Submit Coupon" %>
+        <% end %>
+    </body>
+</html> 
