--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,19 +1,10 @@
+<h3>Coupon Form</h3>
+<%= form_tag coupons_path do %>
+  <label>Coupon Code:</label><br>
+  <%= text_field_tag :'coupon[coupon_code]' %><br>
 
-<!DOCTYPE html>
-<html>  
-    <head>
-        <title>All Coupons</title>
-    </head>
-    <body>
-    <h1>Coupon Form</h1>
-        <%= form_tag coupons_path do %>
-            <label for="store">Store:</label>
-            <%= text_field_tag :store %>
-            <br>
-            <label for="coupon_code">Coupon Code:</label>
-            <%= text_field_tag :coupon_code %>
-            <br>
-            <%= submit_tag "Submit Coupon" %>
-        <% end %>
-    </body>
-</html>
+  <label>Coupon Store</label><br>
+  <%= text_area_tag :'coupon[store]' %><br>
+
+  <%= submit_tag "Submit Coupon" %>
+<% end %>
