--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @coupon do |f| %>
+<% form_for @coupon do |f| %>
 <%= f.label :coupon_form, "Coupon Form" %><br>
 <%= f.label :coupon_code, "Coupon Code" %>
 <%= f.text_field :coupon_code %>
