--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,8 +1,10 @@
-<% form_for @coupon do |f| %>
-<%= f.label :coupon_form, "Coupon Form" %><br>
-<%= f.label :coupon_code, "Coupon Code" %>
-<%= f.text_field :coupon_code %>
-<%= f.label :store %>
-<%= f.text_field :store %>
-<%= f.submit %>
+<h3>Coupon Form</h3>
+<%= form_tag coupons_path do %>
+  <label>Coupon Code:</label><br>
+  <%= text_field_tag 'coupon[coupon_code]' %><br>
+
+  <label>Coupon Store</label><br>
+  <%= text_field_tag 'coupon[store]'%><br>
+
+  <%= submit_tag "Submit Coupon" %>
 <% end %>
