--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Coupon Form</title>
-  </head>
-  <body>
-    <%= form_tag coupons_path do %>
-    <label for="store">Store:</label>
-    <%= text_field_tag :store %>
-    <label for="coupon_code">Coupon Code:</label>
-    <%= text_field_tag :coupon_code %>
-    <%= submit_tag "Submit Coupon" %>
-    <%end%>
-  </body>
-</html>
+<h3>Coupon Form</h3>
+<%= form_tag coupons_path do %>
+  <label>Coupon Code:</label><br>
+  <%= text_field_tag 'coupon[coupon_code]' %><br>
+
+  <label>Coupon Store</label><br>
+  <%= text_field_tag 'coupon[store]'%><br>
+
+  <%= submit_tag "Submit Coupon" %>
+<% end %>
